# Parking-lot-simulator-in-C-

./: .clangd  .gitignore  CMakeLists.txt  README.md  cars.csv
src/: main.cpp
src/SimulationEngine/: SimulationEngine.cpp  SimulationEngine.h
src/barriers/: Barrier.cpp  Barrier.h
src/cli/: CommandLineParser.cpp  CommandLineParser.h
src/parking/: ParkingLot.cpp  ParkingLot.h  ParkingSpot.cpp  ParkingSpot.h
src/ticketing/: PaymentMachine.h  PricingPolicy.h  Ticket.h  TicketMachine.cpp  TicketMachine.h
src/vehicles/: Vehicle.h  VehicleState.h
tests/: ParkingLotTests.cpp  PaymentMachineTests.cpp  SimulationEngineTests.cpp
